Add OS to about

--- a/src/pages/Styles/about.css
+++ b/src/pages/Styles/about.css
@@ -26,6 +26,9 @@ i.devicon-mysql-plain,
 i.devicon-git-plain,
 i.devicon-github-plain,
 i.devicon-jest-plain,
-i.devicon-mocha-plain {
+i.devicon-mocha-plain,
+i.devicon-javascript-plain,
+i.devicon-tailwindcss-plain,
+i.devicon-ubuntu-plain {
   font-size: 60px;
 }
