--- a/src/pages/Styles/aside.css
+++ b/src/pages/Styles/aside.css
@@ -30,30 +30,26 @@ a.social:hover {
   height: calc(100vh - 5rem);
 }
 
-/* width */
 ::-webkit-scrollbar {
   width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   background: white;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
   background: black;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 2px grey; 
+  border: 1px solid black; 
 }
 
 ::-webkit-scrollbar {
-  width: 7px;
+  width: 10px;
 }
