--- a/src/pages/Styles/aside.css
+++ b/src/pages/Styles/aside.css
@@ -58,8 +58,15 @@ a.social:hover {
   border: 2px solid black !important;
 }
 
+.img-me {
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+}
+
 .img-me:hover {
+  -webkit-filter: grayscale(0); /* Safari 6.0 - 9.0 */
+  filter: grayscale(0);
   -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75) !important;
--moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75) !important;
-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75) !important;
+  -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75) !important;
+  box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75) !important;
 }
