--- a/src/pages/Styles/about.css
+++ b/src/pages/Styles/about.css
@@ -1,19 +1,17 @@
 a.about-links {
-  color: black;
-  text-decoration: none;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
   -webkit-transition: 0.5s;
   -moz-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
-  transition-property: box-shadow,border-radius;
+  transition-property: filter;
   
 }
 
 a.about-links:hover {
-  border-radius: 2px;
-  -webkit-box-shadow: 2px 0px 4px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 2px 0px 4px 0px rgba(0,0,0,0.75);
-box-shadow: 2px 0px 4px 0px rgba(0,0,0,0.75);
+  -webkit-filter: grayscale(0); /* Safari 6.0 - 9.0 */
+  filter: grayscale(0);
 }
 
 a.about-links:visited {
@@ -37,6 +35,11 @@ i.devicon-mocha-plain,
 i.devicon-javascript-plain,
 i.devicon-tailwindcss-plain,
 i.devicon-ubuntu-plain,
-i.devicon-typescript-plain {
+i.devicon-typescript-plain,
+i.devicon-html5-plain,
+i.devicon-css3-plain,
+i.devicon-react-original,
+i.devicon-bootstrap-plain {
   font-size: 60px;
+  
 }
