Change responsiveness layout

--- a/src/pages/Styles/aside.css
+++ b/src/pages/Styles/aside.css
@@ -80,3 +80,10 @@ i.devicon-gitlab-plain {
     font-size:35px;
 }
 
+.bg-blur {
+    background-color: rgba(0,0,0, 0.4);
+  }
+
+.index-before {
+    z-index: 1;
+  }
